# IsoPEPS.jl

./: .JuliaFormatter.toml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  Project.toml  README.md  SECURITY.md  iterate_channel_contraction.txt  iterate_channel_measure..txt  iterate_ham_p=1.txt  plot_iter_steps.jl  plot_mps_corr.jl  profile_results1.txt  references.bib  report.typ  run_simulation_safe.sh  topology.typ  vqe_energies_p1.txt  vqe_energies_p2.txt  vqe_energies_p3.txt
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: Manifest.toml  Project.toml
example/: isopeps.jl  peps.jl
ext/: DMRGReferenceExt.jl  ITensorsExt.jl  MPSKitExt.jl  ManifoldsManoptExt.jl  PEPSKitExt.jl
note/: ACTION_PLAN.md  MPSKit_transfer_matrix_report.md  QUICK_SUMMARY.md  SCALING_NOTES.md  SPECTRAL_GAP_ANALYSIS.md  channel.typ  eigenmode_for correlators.typ  entanglement_entropy.typ  gradient_methods.md  note-convergence.md  optimize_circuit_refactor.md  product_state_problem_and_solutions.md  repo_hygiene_audit.typ  small_gap.md  transfer_matrix_degeneracy_analysis.md
project/: Project.toml  README.md  TEBDwithOMEinsum.jl  TMUX_GUIDE.md  compare_cmaes.jl  diagnosis.jl  dmrg_reference.jl  exact.jl  gate_and_cost.jl  monitor.sh  mps_variation.jl  mpskit_j1j2.jl  postprocess.jl  reference.jl  (+4 more)
python/: README.md  pyproject.toml
python/scripts/: run_benchmark.py  run_correlation.py  run_cylinder.py
python/src/tfim/: __init__.py  constants.py  dmrg.py  ed.py  exact.py  utils.py
python/tests/: __init__.py  test_ed.py  test_exact.py  test_utils.py
(+161 files in other folders)
